UI starting to look good

--- a/kayako-helper/src/popup/popup.html
+++ b/kayako-helper/src/popup/popup.html
@@ -1,3 +1,5 @@
+<!-- popup.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,7 @@
     <style>
         body { font-family: sans-serif; padding: 10px; }
         .section { margin-bottom: 1em; }
+        label { display: block; margin-bottom: 4px; }
     </style>
 </head>
 <body>
@@ -14,13 +17,21 @@
         <input type="checkbox" id="trainingModeCheckbox" />
         Training mode (warn before sending public replies)
     </label>
+    <!-- NEW ─────────────────────────────────────────────────────────── -->
+    <label>
+        <input type="checkbox" id="allStylesCheckbox" />
+        Toggle styles      <!-- wording as you like -->
+    </label>
+    <!-- ──────────────────────────────────────────────────────────────── -->
 </div>
+
 <div class="section">
     <h4>This ticket:</h4>
     <div>Subject: <span id="subject">-</span></div>
     <div>Requester: <span id="requesterName">-</span> &lt;<span id="requesterEmail">-</span>&gt;</div>
     <div>Replies sent: <span id="replyCount">0</span></div>
 </div>
-<script src="popup.js"></script>
+
+<script type="module" src="popup.js"></script>
 </body>
 </html>
