Added send in chunks functionality

--- a/kayako-helper/src/popup/popup.html
+++ b/kayako-helper/src/popup/popup.html
@@ -49,11 +49,12 @@
         </label>
     </div>
 
+    <hr />
     <div class="setting">
-        <label>
-            <input type="checkbox" id="customCursorCheckbox" />
-            Use thick-border cursor
-        </label>
+    <label for="wpmInput">Max words per minute&nbsp;</label>
+    <input type="number" id="wpmInput"
+                    value="200" min="50" max="800" step="10"
+                    style="width:6rem;padding:.2rem" />
     </div>
 
     <hr />
