--- a/kayako-helper/src/popup/popup.html
+++ b/kayako-helper/src/popup/popup.html
@@ -83,9 +83,21 @@
     <hr />
     <div class="kh-popup-setting">
         <label for="kh-send-in-chunks-wpm-limit">Max words per minute&nbsp;</label>
+
         <input type="number" id="kh-send-in-chunks-wpm-limit"
                value="200" min="50" max="800" step="10"
                style="width:6rem;padding:.2rem" />
+
+        <!-- Ephor API token -->
+        <div class="kh-popup-setting">
+            <label for="kh-ephor-api-token">Ephor API token</label><br>
+            <input type="password"
+                   id="kh-ephor-api-token"
+                   placeholder="Paste token here"
+                   style="width:100%;padding:.3rem" />
+            <small style="color:#666">Stored only in Chrome local storage</small>
+        </div>
+
     </div>
 </section>
 
