--- a/kayako-helper/src/popup/popup.html
+++ b/kayako-helper/src/popup/popup.html
@@ -108,6 +108,14 @@
                        style="width:6rem;padding:.2rem" />
             </div>
 
+            <!-- Send to QC settings -->
+            <div class="kh-popup-setting">
+                <label><input type="checkbox" id="kh-setting-qc-btn-enabled" checked /> Show “Send to QC” button</label>
+            </div>
+            <div class="kh-popup-setting">
+                <label><input type="checkbox" id="kh-setting-qc-template-only" /> “Send to QC”: insert template only (don’t paste clipboard)</label>
+            </div>
+
             <!-- Ephor API token -->
             <div class="kh-popup-setting">
                 <label for="kh-ephor-api-token">Ephor API token</label><br>
