Done for the day

--- a/kayako-helper/src/popup/popup.html
+++ b/kayako-helper/src/popup/popup.html
@@ -99,6 +99,9 @@
             <div class="kh-popup-setting">
                 <label><input type="checkbox" id="kh-training-mode-checkbox" /> Training mode <small>(warn before public replies)</small></label>
             </div>
+            <div class="kh-popup-setting">
+                <label><input type="checkbox" id="kh-hide-messenger-checkbox" /> Hide Kayako Messenger</label>
+            </div>
             <hr />
             <div class="kh-popup-setting">
                 <label for="kh-send-in-chunks-wpm-limit">Max words per minute&nbsp;</label>
